アカウントIDをフロント側で持てるようにした。
